--- a/docassemble/ssioverpaymentwaiver/data/questions/ssi_overpayment_waiver.yml
+++ b/docassemble/ssioverpaymentwaiver/data/questions/ssi_overpayment_waiver.yml
@@ -134,6 +134,7 @@ code: |
     saw_signature_choice
     if not (signature_choice == 'paper'):
       client.signature    
+    preview_pdf
     download_pdf
   #else:
   #  explain_ssa_632
@@ -246,14 +247,9 @@ content: |
   * you
   * the person who gets the benefits
   
-  should fill out a copy of this form. If you have a conflict
-  of interest with the person who gets the benefits,
-  the person who gets the benefits should fill this out on 
-  their own. You can still fill out a copy for your personal
+  should fill out a copy of this form. If a mistake that you made as the               representative payee caused the overpayment, then the person who gets the benefits   should fill this out on their own. You can still fill out a copy for your personal
   request to Social Security.
   
-  For example: it may be a conflict of interest if a mistake that you
-  made as the rep payee caused the overpayment.
 ---
 id: client_is_overpaid_person
 question: |
@@ -322,14 +318,14 @@ fields:
   - What is the date on the notice?: overpayment_notice_date
     datatype: date
     show if: client_has_overpayment_notice
-  - What is the first month you were overpaid? (include year and month): overpayment_notice_first_overpayment
+  - What is the _first_ month you were overpaid? (include year and month - ex.            01/2024): overpayment_notice_first_overpayment
     show if: client_has_overpayment_notice
-  - What is the last month you were overpaid? (include year and month): overpayment_notice_last_overpayment
+  - What is the _last_ month you were overpaid? (include year and month - ex.             06/2024): overpayment_notice_last_overpayment
     show if: client_has_overpayment_notice
-  - If you were only overpaid for one month, what is the month? (include year and month): overpayment_notice_exact_month
+  - If you were only overpaid for one month, what is the month? (include year and        month - ex. 04/2024): overpayment_notice_exact_month
     required: False  
     show if: client_has_overpayment_notice    
-  - What is the amount of the overpayment?: notice_overpayment_amount
+  - What is the total dollar amount you were overpaid? (ex $1000.00) :                   notice_overpayment_amount
     datatype: currency
     show if: client_has_overpayment_notice
 ---
@@ -490,14 +486,16 @@ subquestion: |
   
   ${ collapse_template(who_needs_to_fill_this_out) }
   
-  Before you start, you should find:
+  ### Before you start, you should find:
   
   1. The notice from Social Security that says that you owe money.
   1. Information about the money that you get each month, and the money that
   people who live with you get.
-  1. Find out if you get SSI, SSDI, or both.
+  1. Find out if you get SSI, SSDI, or both. 
   1. Information about how you save and spend money, such as bank statements
   and bills.
+
+  If you are unsure whether you receive SSI, SSDI, or both you can call Social         Security at ${tel("1-855-807-8807") } or check the [Social Security                  website](https://www.ssa.gov/myaccount/)
   
 fields: 
   - To continue you must accept the [terms of use](https://vlpnet.org/tos-for-guided-interviews/): intro_screen
@@ -592,8 +590,7 @@ question: |
   % endif
 subquestion: |
   Choose the answer that best matches what you understand about what happened.
-  If you agree that ${recordee} was overpaid, you are _not_ agreeing that you
-  need to pay the Social Security Administration back.
+  Even if you agree that ${recordee} _was_ overpaid, you are _NOT_ agreeing here       that you need to pay the Social Security Administration back.
 field: agree_overpaid
 choices:
   - ${ disagree_overpaid_template }: False
@@ -1577,9 +1574,7 @@ subquestion: |
   Read the statement below. If you agree, click the checkbox
   to accept and continue.
 
-    "I authorize any custodian of records at any financial institution to disclose to the Social Security
-    Administration any records about my financial business or that of the person named above whom I
-    legally represent or whose benefits I manage."
+    "I authorize any custodian of records at any financial institution to disclose        to the Social Security Administration any records about my financial business        or that of the person named above whom I legally represent or whose benefits I       manage."
 
   <div class="panel panel-primary">
     <div class="panel-heading">
@@ -1657,14 +1652,14 @@ event: download_pdf
 question: |
   Your document is ready
 subquestion: |
-  1. Download and print 2 copies of the "Request For Waiver Of Overpayment Recovery Or Change In Repayment Rate" document below.
+  Download and print 2 copies of your Overpayment Request document below.
   
   ### Before you send this to the Social Security Administration
   
-  3. Download and print 2 copies of the Financial Records Authorization.   
-  1. Write the Social Security Number (SSN) of the overpaid person on Page 1, Question 1 on both copies. 
-  4. Send one copy of each document to your local Social Security office at ${ ssa_office.address.on_one_line(show_country=False) }. 
-  5. Keep one copy of each document for yourself in a safe place.  
+  1. Download and print 2 copies of the Financial Records Authorization.
+  2. Collect all supporting documents that will be sent with your Request including    the notice of the overpayment.
+  3. Make 2 copies of all supporting documents. Send one copy of each document to      your local Social Security office at                 ${ssa_office.address.on_one_line(show_country=False) }. 
+  4. Keep one copy of each document for yourself in a safe place.  
 attachment code: |
   ssa_634_template['final'] if only_change_monthly_due else [ssa_632_template['final'], ssa_632_addendum] if len(overflow_fields) else ssa_632_template['final']
 allow emailing: False
@@ -2127,6 +2122,7 @@ attachments:
       - "real_property_total_income": ${ real_estate.total(period_to_use=12) }
       - "real_property_total_loan": ${ real_estate.balance_total() }
       - "real_property_total_value": ${ real_estate.market_value_total() }
+      - "real_estate_countable_value": ${ real_estate.market_value_total() -                  real_estate.balance_total() }
       - "client_interest_business_yes": ${ properties.there_are_any}
       - "client_interest_business_no": ${ not properties.there_are_any}
       - "business_income_1": ${ properties.item(0).value}
