--- a/docassemble/ssioverpaymentwaiver/data/questions/ssa_634.yml
+++ b/docassemble/ssioverpaymentwaiver/data/questions/ssa_634.yml
@@ -49,14 +49,14 @@ fields:
 ---
 id: amount you owe
 question: |
-  How much do you owe?
+  How much do you still owe to Social Security?
 fields:
   - no label: total_amount_owed
     datatype: currency
 ---
 id: amount can pay 634
 question: |
-  How much can you afford to pay back each month?
+  How much can you afford to pay Social Security back each month?
 fields:
   - no label: overpayment_affordable_amount
     datatype: currency
