--- a/docassemble/ssioverpaymentwaiver/data/questions/ssi_overpayment_waiver.yml
+++ b/docassemble/ssioverpaymentwaiver/data/questions/ssi_overpayment_waiver.yml
@@ -76,7 +76,8 @@ include:
   - financial_statement.yml
   #- docassemble.gbls:basic-questions-gbls.yml
   - docassemble.ssa:ssa.yml
-  - docassemble.VLPBranding:vlp_branding.yml  
+  - docassemble.VLPBranding:vlp_branding.yml
+  - docassemble.MATCTheme:matc_theme.yml
 ---
 objects:
   - recordee: Individual
@@ -489,7 +490,7 @@ subquestion: |
    
   [Understanding SSI Overpayments](https://www.ssa.gov/ssi/text-overpay-ussi.htm)
 
-  [What can I do if I have an Overpayment Notice?](https://www.ssa.govfaqs/en/questions/KA-02345.html)
+  [What can I do if I have an Overpayment Notice?](https://www.ssa.gov/faqs/en/questions/KA-02345.html)
   
   <div class="alert alert-warning" role="alert">
   :info-circle:  
@@ -502,7 +503,7 @@ subquestion: |
   
   ${ collapse_template(who_needs_to_fill_this_out) }
   
-  ### Before you start, you should find:
+  <h2 class="h4">Before you start you should find:</h2>
   
   1. The notice from Social Security that says that you owe money.
   2. Information about the money that you get each month, and the money that
